docs/0.19/_sources/modeling/gallery/spectral/plot_exp_cutoff_powerlaw_3fgl.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "modeling/gallery/spectral/plot_exp_cutoff_powerlaw_3fgl.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_spectral_plot_exp_cutoff_powerlaw_3fgl.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_modeling_gallery_spectral_plot_exp_cutoff_powerlaw_3fgl.py:


.. _exp-cutoff-powerlaw-3fgl-spectral-model:

Exponential cutoff power law spectral model used for 3FGL
=========================================================

This model parametrises a cutoff power law spectrum used for 3FGL.

It is defined by the following equation:

.. math::
    \phi(E) = \phi_0 \cdot \left(\frac{E}{E_0}\right)^{-\Gamma}
              \exp \left( \frac{E_0 - E}{E_{C}} \right)

.. GENERATED FROM PYTHON SOURCE LINES 17-20

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 20-35

.. code-block:: default


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import ExpCutoffPowerLaw3FGLSpectralModel, Models, SkyModel

    energy_bounds = [0.1, 100] * u.TeV
    model = ExpCutoffPowerLaw3FGLSpectralModel(
        index=2.3 * u.Unit(""),
        amplitude=4 / u.cm ** 2 / u.s / u.TeV,
        reference=1 * u.TeV,
        ecut=10 * u.TeV,
    )
    model.plot(energy_bounds)
    plt.grid(which="both")




.. image-sg:: /modeling/gallery/spectral/images/sphx_glr_plot_exp_cutoff_powerlaw_3fgl_001.png
   :alt: plot exp cutoff powerlaw 3fgl
   :srcset: /modeling/gallery/spectral/images/sphx_glr_plot_exp_cutoff_powerlaw_3fgl_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 36-39

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 39-44

.. code-block:: default


    model = SkyModel(spectral_model=model, name="exp-cutoff-power-law-3fgl-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: exp-cutoff-power-law-3fgl-model
        type: SkyModel
        spectral:
            type: ExpCutoffPowerLaw3FGLSpectralModel
            parameters:
            -   name: index
                value: 2.3
            -   name: amplitude
                value: 4.0
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
            -   name: ecut
                value: 10.0
                unit: TeV






.. _sphx_glr_download_modeling_gallery_spectral_plot_exp_cutoff_powerlaw_3fgl.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_exp_cutoff_powerlaw_3fgl.py <plot_exp_cutoff_powerlaw_3fgl.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_exp_cutoff_powerlaw_3fgl.ipynb <plot_exp_cutoff_powerlaw_3fgl.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
